--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <div class="row hero">
             <div class="col-xs-12">
               <div class="hero-image">
+                <h1>Tableflip</h1>
               </div>
+              <h2>A conference about cool games.</h2>
             </div>
           </div>
 
