--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    	<script type="text/javascript" src="//use.typekit.net/dfe0bzd.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Tableflip Conference — A gathering of board game designers and players to explore what makes a game great.</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  	  <script type="text/javascript" src="//use.typekit.net/dfe0bzd.js"></script>
+	    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Tableflip Conference — a gathering of board game designers and players to explore what makes a game great.</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/main.css">
-      </head>
+      <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+      <link rel="stylesheet" href="/main.css">
+    </head>
     <body>
         <div class="container-fluid">
           <div class="row nav">
           </div>
 
           <div class="row hero">
-            <div class="col-xs-12">
+            <div class="col-md-8 col-md-offset-2">
               <div class="hero-image">
                 <h1>Tableflip</h1>
+                <img src="/logo.svg" alt="Tableflip">
               </div>
               <h2>A conference about cool games.</h2>
             </div>
