--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <body>
         <div class="container-fluid">
           <div class="row nav">
+            <span class="red"></span><span class="yellow"></span><span class="green"></span><span class="blue"></span><span class="purple"></span>
           </div>
 
           <div class="row hero">
@@ -28,33 +29,54 @@
                 <img src="/logo.svg" alt="Tableflip">
               </div>
               <h2>A conference about cool games.</h2>
+              <h3>San Francisco &middot; October 4th—5th</h3>
             </div>
           </div>
 
           <div class="row lineup">
             <div class="col-xs-6">
               <div class="speaker-detail">
-                <div class="name">Matt Leacock</div>
-                <span>Pandemic, Forbidden Desert</span>
+                <div class="speaker">Matt Leacock</div>
+                <div class="games">Pandemic, Forbidden Desert</div>
               </div>
               <div class="speaker-detail">
-                <div class="name">David Malki</div>
-                <span>Machine of Death, Wondermark</span>
+                <div class="speaker">David Malki</div>
+                <div class="games">Machine of Death, Wondermark</div>
 
               </div>
             </div>
             <div class="col-xs-6">
               <div class="speaker-detail">
-                <div class="name">Max Temkin</div>
-                <span>Cards Against Humanity, Tabletop Deathmatch</span>
+                <div class="speaker">Max Temkin</div>
+                <div class="games">Cards Against Humanity, Tabletop Deathmatch</div>
               </div>
               <div class="speaker-detail">
-                <div class="name">Volko Ruhnke</div>
-                <span>The COIN Series</span>
+                <div class="speaker">Volko Ruhnke</div>
+                <div class="games">The COIN Series</div>
               </div>
             </div>
           </div>
           <div class="row signup">
+            <div class="col-md-6  col-md-offset-3">
+              <div class="signup-text">
+                Sign up for early access to tickets
+              </div>
+              <div class="form-group">
+                <div class="input-group">
+                  <input class="form-control" type="email" placeholder="Your email address">
+                  <div class="input-group-addon">Sign up!</div>
+                  <!-- <button type="submit" class="btn btn-default">Find out when tickets</button> -->
+                </div>
+              </div>
+              <!-- <form class="form-inline" role="form">
+                <div class="form-group email-signup">
+                  <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Your email address">
+                </div>
+                <button type="submit" class="btn btn-default">Sign up for more info</button>
+              </form> -->
+            </div>
+
           </div>
           <div class="row footer">
           </div>
