Check it innnnn

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>Tableflip</h1>
                 <img src="/logo.svg" alt="Tableflip">
               </div>
-              <h2>A conference about game design (╯°□°）╯︵ ┻━┻</h2>
+              <h2>A conference designed to (╯°□°）╯︵ ┻━┻</br> the way you think about game design</h2>
               <h3>San Francisco &middot; October 4th—5th</h3>
             </div>
           </div>
@@ -40,7 +40,7 @@
                 <div class="games">Pandemic, Forbidden Desert</div>
               </div>
               <div class="speaker-detail">
-                <div class="speaker"><a href="http://wondermark.com/about/">David Malki !</a></div>
+                <div class="speaker"><a href="http://wondermark.com/about/">David Malki!</a></div>
                 <div class="games">Machine of Death, Wondermark</div>
 
               </div>
