A few style tweaks

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <body>
         <div class="container-fluid">
           <div class="row nav">
-            <span class="red"></span><span class="yellow"></span><span class="green"></span><span class="blue"></span><span class="purple"></span>
-          </div>
-
+          	<div class="tab red"></div><div class="tab yellow"></div><div class="tab green"></div><div class="tab blue"></div><div class="tab purple"></div></div>
           <div class="row hero">
             <div class="col-md-8 col-md-offset-2">
               <div class="hero-image">
