--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 	    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Tableflip Conference — a gathering of board game designers and players to explore what makes a game great.</title>
+      <title>TableFlip Games Conference — a board games conference where designers and players to explore what makes a tabletop game great.</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,7 +26,7 @@
                 <h1>Tableflip</h1>
                 <img src="/logo.svg" alt="Tableflip">
               </div>
-              <h2><span>A conference designed to</span><span class="table-flipper"> (╯°□°）╯︵ ┻━┻ </span><span>the way you think about game design</span></h2>
+              <h2>A conference designed to overturn how you think about game design.</h2>
               <h3>San Francisco &middot; October 4th—5th</h3>
             </div>
           </div>
