--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1>Tableflip</h1>
                 <img src="/logo.svg" alt="Tableflip">
               </div>
-              <h2>A conference on design, play and tabletop games.</h2>
+              <h2>A conference on design, play and tabletop games</h2>
               <h3>San Francisco &middot; October 4th—5th</h3>
             </div>
           </div>
