Update placeholder text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <form class="form-inline email-signup-form" role="form" action="//thisgame.us4.list-manage.com/subscribe/post?u=69f2fd25cd13c43e4fe7155fd&amp;id=f74fe540b9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div class="form-group">
                   <div class="input-group">
-                    <input class="form-control new_email_input" type="email" name="EMAIL" placeholder="e-mail@cyberspace.net">
+                    <input class="form-control new_email_input" type="email" name="EMAIL" placeholder="Your email">
                     <span class="input-group-btn">
                       <button type="submit" name="subscribe" class="btn btn-default new_email_signup">Go!</button>
                     </span>
