Add mailchimp config

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
+      <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
+      <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
+
       <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -70,7 +73,7 @@
                 For early access to tickets, leave us your email:
               </div>
 
-              <form class="form-inline email-signup-form" role="form" action="//thisgame.us4.list-manage.com/subscribe/post?u=69f2fd25cd13c43e4fe7155fd&amp;id=f74fe540b9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <form class="form-inline email-signup-form" role="form" action="//tableflip.us8.list-manage.com/subscribe/post?u=3b8bd97395e841582eec5a5a9&amp;id=fa2c184417" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div class="form-group">
                   <div class="input-group">
                     <input class="form-control new_email_input" type="email" name="EMAIL" placeholder="Your email">
@@ -82,7 +85,7 @@
                     <div class="response" id="mce-error-response" style="display:none"></div>
                     <div class="response" id="mce-success-response" style="display:none"></div>
                   </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_69f2fd25cd13c43e4fe7155fd_f74fe540b9" tabindex="-1" value=""></div>
+                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_3b8bd97395e841582eec5a5a9_fa2c184417" tabindex="-1" value=""></div>
                 </div>
               </form>
 
