Add favicon, twitter and email links

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
-      <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
+      <link rel="icon" sizes="32x32" href="/favicon.png">
 
       <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
       <!-- Latest compiled and minified CSS -->
@@ -93,7 +92,9 @@
 
           </div>
           <div class="row footer green">
-              ┬─┬ノ( º _ ºノ)
+              <span><a href="https://twitter.com/tableflipcon">@tableflipcon </a></span> :: 
+              <span><a href="mailto:contact@tableflip.us?subject=TableFlip 2014 "> contact@tableflip.us</a></span> ::
+              <span> ┬─┬ノ( º _ ºノ)</span>
           </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
