--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <div class="row speaker-header red">
             <div class="col-xs-12">
-              <div class="speaker">OUR PRESENTERS</div>
+              <div class="speaker-header-text">Featuring</div>
             </div>
           </div>
 
@@ -67,9 +67,9 @@
           </div>
 
           <div class="row signup yellow">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-8 col-md-offset-2">
               <div class="signup-text">
-                For early access to tickets, leave us your email:
+                For early access to tickets, leave us your email
               </div>
 
               <form class="form-inline email-signup-form" role="form" action="//tableflip.us8.list-manage.com/subscribe/post?u=3b8bd97395e841582eec5a5a9&amp;id=fa2c184417" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -92,9 +92,11 @@
 
           </div>
           <div class="row footer green">
-              <span><a href="https://twitter.com/tableflipcon">@tableflipcon </a></span> :: 
-              <span><a href="mailto:contact@tableflip.us?subject=TableFlip 2014 "> contact@tableflip.us</a></span> ::
-              <span> ┬─┬ノ( º _ ºノ)</span>
+              <span><a href="https://twitter.com/tableflipcon">@tableflipcon</a></span>
+              &nbsp; &middot; &nbsp;
+              <span><a href="mailto:contact@tableflip.us?subject=TableFlip 2014 "> contact@tableflip.us</a></span>
+              &nbsp; &middot; &nbsp;
+              <span><a href="http://knowyourmeme.com/memes/flipping-tables-%E2%95%AF%E2%96%A1%EF%BC%89%E2%95%AF%EF%B8%B5-%E2%94%BB%E2%94%81%E2%94%BB">┬─┬ノ( º _ ºノ)</a></span>
           </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
