--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <link rel="icon" sizes="32x32" href="/favicon.png">
+      <link rel="icon" sizes="32x32" href="/favicon.png?v=1">
 
       <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
       <!-- Latest compiled and minified CSS -->
