--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <div class="col-md-8 col-md-offset-2">
                 <p>At TableFlip, there's no exhibit hall, no tournaments and no huge crowds. Instead, four talented game designers will present in-depth case studies of unique tabletop games.</p>
 
-                <p>After exploring game mechanics and theme in detail, attendees experience each game in group play sessions — with tons of time for discussion the art and practice of game design.</p>
+                <p>After exploring game mechanics and theme in detail, attendees experience each game in group play sessions — with tons of time for discussing the art and practice of game design.</p>
               </div>
           </div>
 
