--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
           <div class="row footer green">
               <span><a href="https://twitter.com/tableflipcon">@tableflipcon</a></span>
               &nbsp; &middot; &nbsp;
+              <span><a href="https://tableflip.us/harassment">harassment policy</a></span>
+              &nbsp; &middot; &nbsp;
               <span><a href="mailto:contact@tableflip.us?subject=TableFlip 2014 "> contact@tableflip.us</a></span>
               &nbsp; &middot; &nbsp;
               <span><a href="http://knowyourmeme.com/memes/flipping-tables-%E2%95%AF%E2%96%A1%EF%BC%89%E2%95%AF%EF%B8%B5-%E2%94%BB%E2%94%81%E2%94%BB">┬─┬ノ( º _ ºノ)</a></span>
